<resources>
    <string name="app_name">S-100</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--<string name="banner_ad_unit_id">ca-app-pub-1337632346059604/6245033379</string>-->

    <string name="txt1">Экспресс-мойка</string>

    <string name="fragment_wash">Hello wash fragment</string>
    <string name="fragment_service">Hello services fragment</string>
    <string name="fragment_shop">Hello shop fragment</string>
    <string name="fragment_blank">Hello blank fragment</string>
    <string-array name="drawer_layout">
        <item>Главная</item>
        <item>Мойка</item>
        <item>СТО</item>
        <item>Магазин</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="full_name_2">Фамилия</string>
    <string name="full_name">Отчество</string>
    <string name="name">Имя</string>
    <string name="txt_create_order">Оформление заказа</string>
    <string name="txt_e_mail">E-mail</string>
    <string name="txt_name_service">Название услуги</string>
    <string name="telephone">Телефон</string>
    <string name="marka_model_auto">Марка и модель авто</string>

    <string-array name="type_engine">
        <item>Бензин</item>
        <item>Газ</item>
        <item>Дизель</item>
        <item>Гибрид</item>
        <item>Электро</item>
    </string-array>

    <string-array name="capacity_engine">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.1</item>
        <item>2.2</item>
        <item>2.3</item>
        <item>2.4</item>
        <item>2.5</item>
        <item>2.6</item>
        <item>2.7</item>
        <item>2.8</item>
        <item>2.9</item>
        <item>3.0</item>
        <item>3.1</item>
        <item>3.2</item>
        <item>3.3</item>
        <item>3.4</item>
        <item>3.5</item>
        <item>3.6</item>
        <item>3.7</item>
        <item>3.8</item>
        <item>3.9</item>
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.4</item>
        <item>4.5</item>
        <item>4.6</item>
        <item>4.7</item>
        <item>4.8</item>
        <item>4.9</item>
        <item>5.0</item>
        <item>5.0</item>
        <item>5.1</item>
        <item>5.2</item>
        <item>5.3</item>
        <item>5.4</item>
        <item>5.5</item>
        <item>5.6</item>
        <item>5.7</item>
        <item>5.8</item>
        <item>5.9</item>
        <item>6.0</item>
        <item>6.1</item>
        <item>6.2</item>
        <item>6.3</item>
        <item>6.4</item>
        <item>6.5</item>
        <item>6.6</item>
        <item>6.7</item>
        <item>6.8</item>
        <item>6.9</item>
        <item>7.0</item>
        <item>7.1</item>
        <item>7.2</item>
        <item>7.3</item>
        <item>7.4</item>
        <item>7.5</item>
        <item>7.6</item>
        <item>7.7</item>
        <item>7.8</item>
        <item>7.9</item>
        <item>8.0</item>
        <item>8.1</item>
        <item>8.2</item>
        <item>8.3</item>
        <item>8.4</item>
        <item>8.5</item>
        <item>8.6</item>
        <item>8.7</item>
        <item>8.8</item>
        <item>8.9</item>
        <item>9.0</item>
    </string-array>

    <string-array name="type_body">
        <item>Седан</item>
        <item>Универсал</item>
        <item>Хэтчбэк</item>
        <item>Купе</item>
        <item>Микроавтобус</item>
        <item>Минивэн</item>
        <item>Пикап</item>
        <item>Фургон</item>
    </string-array>

    <string-array name="type_payment">
        <item>Оплата наличными</item>
        <item>Оплата карточкой</item>
    </string-array>


    <string name="reference_fragment">Данная программа предназначена для компаний, занимающихся технических обслуживанием автомобилей, мойкой автомобилей,а также имеют при себе небольшой магазин.
    \n
        <b>ШАГ 1:</b>
        \n
        Для начала, ознакомтесь со всеми услугами, предоставляемыми компанией:
        \n
        Сдвигаем пальцем вправо - тем самым вызываем меню.
        \n
        Меню состоит из:
        \n
        Акций\n
        Мойки\n
        СТО\n
        Магазин\n
        Обратная связь\n
        О нас\n
        Справка
    \n
        <b>ШАГ 2:</b>
        \n
        После того, как Вы выбрали услугу(товар) для себя, Вы можете просмотреть подробную его информацию нажав на стрелку вниз,
        а также можете заказать товар(услугу) нажав на картинку
        \n
        <b>ШАГ 3:</b>
        \n
        Если Вы нашли какую-то ошибку или у Вас есть пожелания, то Вы можете обратиться к нам путём обратной связи


    </string>
    <string name="txt_support">Что Вы хотите сделать?</string>
    <string name="send_email_support">sergiksavonow82@gmail.com</string>
    <string name="promotions_menu">Акции</string>
    <string name="wash_menu">Мойка</string>
    <string name="service_menu">СТО</string>
    <string name="shop_menu">Магазин</string>
    <string name="feedback_menu">Обратная связь</string>
    <string name="about_menu">О нас</string>
    <string name="ref_menu">Справка</string>
    <string name="detail_inform_about">
        Данное приложение используется компанией S-100.
        Компания S-100 предоставляет клиентам услуги (товары) по 3 разделам: мойка, СТО, магазин.
        В нашей компании работают исключительно профессионалы своего дела, за их плечами лежит огромный опыт работы.
        Мы уважаем наших клиентов и поэтому подпускаем к автомобилям исключительно профессионалов.
        В нашем сервисе Вы получите высококачественную, а также быструю работу за минимальные цены.
       </string>
    <string name="programmer">
        Данное приложение разработано учащимся Минского государственного колледжа электроники,
        группы №13 ТП - Сасковцом Сергеем Юрьевичем
    </string>
    <string name="nav_reference">Справка</string>
    <string-array name="theme_support">
        <item>Сообщить о неполадке</item>
        <item>Предложить новую фунцию</item>
        <item>Сообщить о проблеме с заказом</item>
    </string-array>
</resources>
